--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -3,3 +3,4 @@
   Name: <%= @todo.name %> <br>
   Description: <%= @todo.description %>
 </p>
+<%= link_to "Edit this Todo", edit_todo_path(@todo) %> | <%= link_to "Back to List", todos_path %>
